--- a/lab11.ipynb
+++ b/lab11.ipynb
@@ -206,22 +206,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-aa3c05bf5c80>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-aa3c05bf5c80>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    list_f=[lst[i] if (lst[i]!=\".\" or \"p\" or \"y\")]\u001b[0m\n\u001b[0m                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['t',\n",
+       " 'e',\n",
+       " 's',\n",
+       " 't',\n",
+       " '1',\n",
+       " 't',\n",
+       " 'e',\n",
+       " 's',\n",
+       " 't',\n",
+       " '2',\n",
+       " 't',\n",
+       " 'e',\n",
+       " 's',\n",
+       " 't',\n",
+       " '3',\n",
+       " 't',\n",
+       " 'e',\n",
+       " 's',\n",
+       " 't',\n",
+       " '4']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "lst=\"test1.py test2.py test3.py test4.py\"\n",
-    "list_f=[lst[i] if (lst[i]!=\".\" or \"p\" or \"y\")]\n",
-    "print(list_f)"
+    "lst=lst.split()\n",
+    "lst\n",
+    "lst_r=[lst[i][j] for i in range(0, len(lst)) for j in range(0,5)]\n",
+    "lst_r"
    ]
   },
   {
